--- a/index.html
+++ b/index.html
@@ -4,16 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy New Year Assinment </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&display=swap" rel="stylesheet">
+
+
+
+
+    <link rel="stylesheet" href="styles/newyear.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+        <div class="happy">
+        <h3 class="New">Happy New Year</h3>
+        <h1 class="Year">New Year Party <br> Celebration</h1>
+        </div>
+        <img class="banner" src="images/Banner Image.png" alt="">
+
 
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
     
 </body>
