--- a/index.html
+++ b/index.html
@@ -24,8 +24,22 @@
 
     </header>
     <main>
+        <div class="off">
+            <h1 class="Holiday">65% OFF</h1>
+            <h4 class="Deals">OUR HOLIDAY DEALS ARE BETTER</h4>
+            <h2 class="Better">ALL CATEGORIES</h2>
+            
+        </div>
+        <img class="Happy-new-year" src="images/New Year Photo.png" alt="">
 
     </main>
+    <section>
+        <div class="welcome">
+            <h1>Welcome to <br> midnight party</h1>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <button>Join Now</button>
+        </div>
+    </section>
     <footer>
 
     </footer>
