--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
         <img class="Happy-new-year" src="images/New Year Photo.png" alt="">
 
     </main>
-    <section>
+    <section class="section">
         <div class="welcome">
-            <h1>Welcome to <br> midnight party</h1>
-            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <h1 class="party">Welcome to <br> midnight party</h1>
+            <p class="Dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             <button>Join Now</button>
         </div>
+        <img class="vector" src="images/Vectorrr.png" alt="">
     </section>
     <footer>
 
