reload the section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <button>Join Now</button>
         </div>
         <img class="vector" src="images/Vectorrr.png" alt="">
+        <img class="group" src="images/Group 70.png" alt="">
     </section>
+
     <footer>
 
     </footer>
