best and grid-container added

--- a/index.html
+++ b/index.html
@@ -43,6 +43,23 @@
         <img class="group" src="images/Group 70.png" alt="">
     </section>
 
+    <!-- grid sectin -->
+<div>
+    <h4 class="best">THE BEST GIFTS</h4>
+    <h2 class="awesome">Our Awesome Portfolio</h2>
+    <p class="amet">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+</div>
+ 
+    <div class="grid-container">
+        <div class="item1"><img src="images/Rectangle 3.png" alt=""></div>
+        <div class="item2"><img src="images/Rectangle 4.png" alt=""></div>
+        <div class="item3"><img src="images/Rectangle 5.png" alt=""></div>  
+        <div class="item4"><img src="images/Rectangle 6.png" alt=""></div>
+        <div class="item5"><img src="images/Rectangle 7.png" alt=""></div>
+        <div class="item6"><img src="images/Rectangle 8.png" alt=""></div>
+
+      </div>
+
     <footer>
 
     </footer>
