--- a/index.html
+++ b/index.html
@@ -60,6 +60,23 @@
 
       </div>
 
+      <!-- subuscribe sectio -->
+       <div>
+      <div class="subuscribe">
+        <img class="news-paper" src="images/Group 61.png" alt="">
+        <h1 class="News-letter">Subscribe Newsletter</h1>
+        <p class="molestie">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        <form class="contact" action="">
+            <input class="malesuada" type="user@gmail.com" name="" placeholder="user@gmail.com" id="">
+            <input class="Inter" type="Subscribe" value="Subscribe">
+
+        </form>
+     
+      </div>
+     
+
+       </div>
+
     <footer>
 
     </footer>
